# bioengineer

./: .gitignore  Cargo.toml  LICENSE  justfile  loc_box_plot.py  local_build_and_run_web.sh  readme.md  recompile_web.sh  release.sh
.clippy/: Clippy.run.xml  run.sh
.github/workflows/: build.yml  build_mac.yml  release.yml  rust.yml
docs/: architecture.drawio  design.md  lore.md  mechanics.md  roadmap.md
export_html/: index.html
game/: Cargo.toml
game/src/: lib.rs  main.rs  world.rs
game/src/common/: cli.rs
game/src/screen/: assets.rs  drawer_trait.rs  drawing_state.rs  gui.rs  hud.rs
game/src/screen/gui/: format_units.rs
game/src/screen/gui/panels/: game_finished.rs
game/src/world/: fluids.rs
game/src/world/fluids/: tests.rs
game/src/world/map/: cell.rs
game/src/world/map/chunk/: chunks.rs
logic/: Cargo.toml
logic/src/: lib.rs  scene.rs  screen.rs  world.rs
logic/src/common/: profiling.rs
logic/src/scene/: introduction_scene.rs  main_scene.rs
logic/src/scene/introduction_scene/: fire_particles.rs
logic/src/screen/: assets.rs  draw_map.rs  drawer_trait.rs  drawing_state.rs  gui.rs  hud.rs  input_trait.rs  main_scene_input.rs  main_scene_input_source.rs
logic/src/screen/coords/: cell_pixel.rs  cell_tile.rs  tile_pixel.rs
logic/src/screen/drawing_state/: change_height.rs  highlight_cells.rs  move_horizontally.rs
logic/src/screen/gui/: format_units.rs  gui_actions.rs  panels.rs
logic/src/screen/gui/panels/: cell_info.rs  draw_available_transformations.rs  game_finished.rs  initial_dialog.rs  task_queue.rs  top_bar.rs
logic/src/world/: fluids.rs  game_state.rs  gameplay_tests.rs  map.rs  networks.rs  robots.rs
logic/src/world/fluids/: tests.rs
logic/src/world/fluids/tests/: change_tiles.rs  floodable.rs
logic/src/world/map/: cell.rs  cell_cube_iterator.rs  cell_envelope.rs  chunk.rs  map_iterator.rs  transform_cells.rs  transformation_rules.rs
logic/src/world/map/chunk/chunks/: cache.rs
logic/src/world/networks/: network.rs
mq_basics/: Cargo.toml
mq_basics/src/: lib.rs
optimizing/: fluids_001_3f11cd1.txt  fluids_002_56f51b9.txt  fluids_003_0764083.txt  fluids_004_4d3222e.txt  fluids_005_dc7a293.txt  fluids_006_a4185f7.txt  fluids_007_3e3ee8f.txt  fluids_008_a9f4d73.txt  fluids_009_54d23dc.txt  fluids_010_299c9d6.txt
src/: assets.rs  drawing.rs  game_state.rs  gui.rs  gui_actions.rs  input.rs  lib.rs  main.rs  map.rs  profiling.rs  scene.rs  screen.rs  world.rs
src/common/: cli.rs  mod.rs  profiling.rs
src/drawing/: assets.rs  coords.rs  drawing_macroquad.rs  hud.rs  tiles.rs
src/drawing/actions/: change_height.rs  highlight_cells.rs  move_horizontally.rs
src/drawing/coords/: cast.rs  cell_pixel.rs  cell_tile.rs  tile_pixel.rs  truncate.rs
src/game_state/: networks.rs  robots.rs
src/input/: input_macroquad.rs
src/map/: cell.rs  cell_cube_iterator.rs  cell_envelope.rs  chunk.rs  fluids.rs  map_iterator.rs  mechanics.rs  ref_mut_iterator.rs  transform_cells.rs  trunc.rs
src/map/chunk/: cell_iter.rs  chunk_cell_index_iter.rs
src/scene/: introduction_scene.rs  main_scene.rs
src/scene/introduction_scene/: fire_particles.rs
src/screen/: assets.rs  draw_map.rs  drawer_trait.rs  drawing.rs  drawing_state.rs  gui.rs  hud.rs  input.rs  input_trait.rs  main_scene_input.rs
src/screen/coords/: cast.rs  cell_pixel.rs  cell_tile.rs  tile_pixel.rs
src/screen/drawing/: actions.rs  hud.rs  tiles.rs
src/screen/drawing_state/: change_height.rs  draw_available_transformations.rs  draw_map.rs  highlight_cells.rs  hud.rs  move_horizontally.rs  tiles.rs
src/screen/gui/: coords.rs  draw_available_transformations.rs  draw_map.rs  format_units.rs  gui_actions.rs  hud.rs  panels.rs  units.rs
src/world/: fluids.rs  game_state.rs  gameplay_tests.rs  map.rs  networks.rs  robots.rs
src/world/map/: cell.rs  (+7 more)
(+37 files in other folders)
