[package]
name = "bioengineer"
version = "0.5.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "=0.3.16"
futures = "=0.3.21"
opensimplex_noise_rs = "=0.3.0"
fluent-asserter = "=0.1.9"
git-version = "=0.3.5"
clap = { version = "=3.2.23", features = ["derive"] }
