[package]
name = "bioengineer"
version = "0.0.0"  # version comes from git at build time
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "bioengineer"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
macroquad = "=0.3.24"
futures = "=0.3.21"
opensimplex_noise_rs = "=0.3.0"
fluent-asserter = "=0.1.9"
git-version = "=0.3.5"
clap = { version = "=3.2.23", features = ["derive"] }
notify = "=5.1.0"
egui-miniquad = "=0.14.0"
egui = "=0.21.0"

egui_demo_lib = { version = "=0.21.0", default-features = false }
glam = "=0.22.0"
