[package]
name = "bioengineer"
version = "0.0.0"  # version comes from git at build time
edition = "2021"
default-run = "bioengineer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=3.2.23", features = ["derive"] }
egui = "=0.21.0"
egui-miniquad = "=0.14.0"
egui_demo_lib = { version = "=0.21.0", default-features = false }
git-version = "=0.3.5"
juquad = { git = "https://github.com/jmmut/juquad.git", tag = "0.4.2" }
#juquad = {path = "../../juquad" }
macroquad = "=0.3.24"
notify = "=5.1.0"
logic = { path = "../logic" }
mq_basics = { path = "../mq_basics" }

