[package]
name = "logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
clap = { version = "=3.2.23", features = ["derive"] }
fluent-asserter = "=0.1.9"
futures = "=0.3.21"
git-version = "=0.3.5"
#juquad = { git = "https://github.com/jmmut/juquad.git", tag = "0.4.1" }
juquad = {path = "../../juquad" }
mq_basics = {path = "../mq_basics"}
notify = "=5.1.0"
opensimplex_noise_rs = "=0.3.0"
