[package]
name = "logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
juquad = { git = "https://github.com/jmmut/juquad.git", tag = "0.4.3" }
#juquad = {path = "../../juquad" }
mq_basics = {path = "../mq_basics"}
opensimplex_noise_rs = "=0.3.0"
